<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.main.MainActivity"
    android:padding="@dimen/triple_spacing">

    <TextView
        android:id="@+id/tv_login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_login_body"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_login_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:gravity="center"
        android:text="@string/login_body"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@id/btn_spotify"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_header"/>

    <Button
        android:id="@+id/btn_spotify"
        style="@style/AppTheme.Button.Secondary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/spotify"
        app:layout_constraintBottom_toTopOf="@id/btn_apple_music"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_body"/>

    <Button
        android:id="@+id/btn_apple_music"
        style="@style/AppTheme.Button.Secondary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/apple_music"
        app:layout_constraintBottom_toTopOf="@id/btn_google_play_music"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_spotify"/>

    <Button
        android:id="@+id/btn_google_play_music"
        style="@style/AppTheme.Button.Secondary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/google_play_music"
        app:layout_constraintBottom_toTopOf="@id/btn_start_transfer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_apple_music"/>

    <Button
        android:id="@+id/btn_start_transfer"
        style="@style/AppTheme.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quadruple_spacing"
        android:text="@string/start_transfer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google_play_music"/>

</android.support.constraint.ConstraintLayout>